--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,6 +221,19 @@ ubuntu20-04-build:
         - linux
     image: "graphviz/graphviz:ubuntu-20.04"
 
+ubuntu18-04-cmake-build:
+    stage: build
+    script:
+        - mkdir build
+        - cd build
+        - cmake ..
+        - cmake --build .
+    except:
+        - tags
+    tags:
+        - linux
+    image: "graphviz/graphviz:ubuntu-18.04"
+
 windows-cmake-Win32-release-build:
     <<: *windows_build_definition
     before_script:
