Add shim for python3.exe on Windows
Chocolatey doesn't install python3 as python3.exe, only as python.exe.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,7 @@ portable-source:
         # Install and set PATH
         - choco install --no-progress -y activeperl
         - choco install --no-progress -y python3
+        - C:\ProgramData\chocolatey\tools\shimgen.exe -o=C:\Python38\python3.exe -p=C:\Python38\python.exe
         - choco install --no-progress -y grep
         - $Env:Path += ";C:\Python38"
         - $Env:Path += ";C:\Python38\Scripts"
