Change to git ignore some files in project root only
E.g. VERSION (aka version on Windows) was ignored in all directories.

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,9 @@ CMakeFiles
 CMakeCache.txt
 
 # product of: make dist
-graphviz-*.tar.gz
-VERSION
-COLLECTION
+/graphviz-*.tar.gz
+/VERSION
+/COLLECTION
 
 lib/rxspencer/re
 lib/rxspencer/*.oo
