--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,11 +134,10 @@ portable-source:
               mv graphviz-install.exe graphviz-install-$GV_VERSION-$API.exe;
               $env:Path += ";" + $env:graphviz_install_dir + "\bin"
               dot -c;
-              ctest -C $env:configuration;
               cd ..;
               $Env:INCLUDE += ";C:\Graphviz\include";
               $Env:LIB += ";C:\Graphviz\lib";
-              python3 -m pytest --junitxml=report.xml rtest\test_examples.py;
+              python3 -m pytest --junitxml=report.xml rtest\test_examples.py tests\regression_tests\shapes;
             }
             elseif($env:build_system -eq "msbuild") {
               # Append build destination to the PATH, configure dot and execute regression tests
