--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,9 +144,7 @@ portable-source:
               # The following is per https://gitlab.com/graphviz/graphviz/-/merge_requests/1345
               $env:Path = $env:CI_PROJECT_DIR + "\" + $env:configuration + "\Graphviz\bin" + ";" + $env:Path;
               dot -c;
-              cd tests\regression_tests;
-              ./regression_tests.ps1;
-              cd ..\..;
+              python3 -m pytest --junitxml=report.xml tests\regression_tests\shapes tests\regression_tests\large
             }
         # Create artifacts to archive
         - $ID = "windows"
