remove exception-style control flow in lib/rbtree
Fixes #1742.

--- a/lib/rbtree/Makefile.am
+++ b/lib/rbtree/Makefile.am
@@ -3,7 +3,7 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)
 
-noinst_HEADERS = misc.h red_black_tree.h stack.h
+noinst_HEADERS = red_black_tree.h stack.h
 noinst_LTLIBRARIES = librbtree_C.la
 
 librbtree_C_la_SOURCES = misc.c red_black_tree.c stack.c
