make sfio #includes unambiguous
This change makes the #includes of lib/sfio headers unambiguous within the
lib/sfio C sources. The upcoming plan is to also make the header #includes and
any of lib/sfio's dependents also unambiguous this way. Related to #1785.

--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -3,6 +3,8 @@
 
 SUBDIRS = Sfio_f
 
+AM_CPPFLAGS = -I$(top_srcdir)/lib
+
 noinst_HEADERS = sfhdr.h sfio.h sfio_t.h vthread.h
 noinst_LTLIBRARIES = libsfio_C.la
 
