--- a/lib/sfio/Sfio_f/Makefile.am
+++ b/lib/sfio/Sfio_f/Makefile.am
@@ -1,7 +1,7 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib/sfio
+AM_CPPFLAGS = -I$(top_srcdir)/lib
 
 noinst_LTLIBRARIES = libsfiof_C.la
 
