--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -78,7 +78,7 @@ DISTCLEANFILES = brewer_lib color_lib colortbl.h ps_font_equiv.h \
 	y.output y.tab.[ch] htmlparse.[ch]
 
 EXTRA_DIST = README.imap chars.tcl ps_font_equiv.h \
-	strcasecmp.c strncasecmp.c htmlparse.c htmlparse.h \
+	htmlparse.c htmlparse.h \
 	y.tab.c y.tab.h y.output entities.html entities.tcl \
 	brewer_colors brewer_lib svgcolor_names svgcolor_lib \
 	color_names color_lib colortbl.h mksvgfonts.pl
