--- a/Makefile.am
+++ b/Makefile.am
@@ -40,7 +40,7 @@ $(top_builddir)/graphviz_version.h: config.h
 
 EXTRA_DIST = $(txt) $(html) graphviz.spec \
 	autogen.sh config/depcomp config/config.rpath \
-	builddate.h compat.h \
+	builddate.h \
 	Makeargs iffe config.iffe \
 	m4/README m4/iconv.m4 m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
 	graphviz.7 Doxyfile.in Doxyfile awk \
