remove now unnecessary detection of str[n]casecmp
Related to #1775.

--- a/configure.ac
+++ b/configure.ac
@@ -474,7 +474,7 @@ AC_CHECK_FUNCS([lrand48 drand48 srand48 setmode setenv getenv \
 	cbrt vsnprintf _NSGetEnviron mallopt mallinfo mstats getpagesize \
   ftruncate lseek64 stat64 vfork unlink waitpid select])
 
-AC_REPLACE_FUNCS([strcasecmp strncasecmp strcasestr])
+AC_REPLACE_FUNCS([strcasestr])
 
 dnl -----------------------------------
 dnl libtool ltdl on-demand plugin loading
