--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ portable-source:
         - choco install --no-progress -y python3
         - C:\ProgramData\chocolatey\tools\shimgen.exe -o=C:\Python38\python3.exe -p=C:\Python38\python.exe
         - choco install --no-progress -y grep
+        - choco install --no-progress -y diffutils
         - $Env:Path += ";C:\Python38"
         - $Env:Path += ";C:\Python38\Scripts"
         - pip install pytest
