--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,14 +73,14 @@ portable-source:
         - $Env:Path += ";C:\Python38\Scripts"
         - pip install pytest
         - $Env:Path += ";$env:CI_PROJECT_DIR\windows\dependencies\graphviz-build-utilities"
-        - $Env:Path += ";C:\Program Files\CMake\bin"
+        # CMake's cpack must be before Chocolatey's in the path
+        - $Env:Path = "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin;$Env:Path"
         - $Env:Path += ";C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
         - $Env:Path += ";C:\Program Files (x86)\NSIS\Bin"
         - $Env:graphviz_install_dir = "C:\Graphviz"
         # Build
         - >-
             if($env:build_system -eq "cmake") {
-              choco install --no-progress -y cmake;
               choco install --no-progress -y NSIS;
               mkdir build;
               cd build;
@@ -102,7 +102,7 @@ portable-source:
         - >-
             if($env:build_system -eq "cmake") {
               cd build;
-              C:\"Program Files"\CMake\bin\cpack -C $env:configuration
+              cpack -C $env:configuration
               cd ..;
             }
             elseif($env:build_system -eq "msbuild") {
