Correct package version in CMake exe installer
Fixes https://gitlab.com/graphviz/graphviz/-/issues/1791

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,16 @@ else()
     endif()
 endif()
 
+string(REGEX REPLACE "\\..*"
+   "" GRAPHVIZ_VERSION_MAJOR
+   ${GRAPHVIZ_VERSION_STRING})
+string(REGEX REPLACE "[^.]*\\.([^.]*)\\..*"
+   "\\1" GRAPHVIZ_VERSION_MINOR
+   ${GRAPHVIZ_VERSION_STRING})
+string(REGEX REPLACE "[^.]*\\.[^.]*\\.(.*)$"
+   "\\1" GRAPHVIZ_VERSION_PATCH
+   ${GRAPHVIZ_VERSION_STRING})
+
 set(GRAPHVIZ_VERSION_FULL "${GRAPHVIZ_VERSION_STRING}")
 file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/builddate.h "#define BUILDDATE \"${GRAPHVIZ_VERSION_BUILD}\"")
 
