Changed to generate VERSION in Windows builds
Instead of getting it from the portable_source stage. This allows the
Windows builds to start directly and not wait for the portable_source
stage.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ portable-source:
         - $Env:Path += ";C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
         - $Env:graphviz_install_dir = "C:\Graphviz"
         # Build
+        - python3 gen_version.py > VERSION
         - >-
             if($env:build_system -eq "cmake") {
               mkdir build;
