--- a/lib/cdt/Makefile.am
+++ b/lib/cdt/Makefile.am
@@ -7,7 +7,7 @@ pdfdir = $(pkgdatadir)/doc/pdf
 pkgextraincludedir = $(pkgincludedir)
 pkgconfigdir = $(libdir)/pkgconfig
 
-AM_CPPFLAGS = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)/lib
 
 pkginclude_HEADERS = cdt.h
 noinst_HEADERS = dthdr.h
