--- a/lib/cgraph/Makefile.am
+++ b/lib/cgraph/Makefile.am
@@ -6,7 +6,7 @@ CGRAPH_VERSION="6:0:0"
 pdfdir = $(pkgdatadir)/doc/pdf
 pkgconfigdir = $(libdir)/pkgconfig
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib/cdt
+AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir)/lib/cdt
 
 pkginclude_HEADERS = cgraph.h strcasecmp.h
 noinst_HEADERS = agxbuf.h cghdr.h
