Fix publishing of Windows build artifcats
The COLLECTION was missing since we no longer get it from the
portable_source stage because the Windows builds start directly and do
not wait for the portable_source stage. Therefor we generate it in the
Windows builds directly instead.

This regresion was introduced in
https://gitlab.com/magjac/graphviz/-/commit/3ac7e1c54fe5f8f4bb304796ab77901c73401aee.

Fixes https://gitlab.com/graphviz/graphviz/-/issues/1797

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,7 @@ portable-source:
         - $Env:graphviz_install_dir = "C:\Graphviz"
         # Build
         - python3 gen_version.py > VERSION
+        - python3 gen_version.py --collection > COLLECTION
         - >-
             if($env:build_system -eq "cmake") {
               mkdir build;
