--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ portable-source:
     stage: build
     needs: []
     script:
+        - $ErrorActionPreference = "Stop"
         # Toolchain definitions
         - if($env:platform -eq "x64") {
             $TARGET_ARCH = "x64";
