--- a/lib/circogen/Makefile.am
+++ b/lib/circogen/Makefile.am
@@ -4,6 +4,7 @@
 pkgconfigdir = $(libdir)/pkgconfig
 
 AM_CPPFLAGS = \
+        -I$(top_srcdir)/lib \
         -I$(top_srcdir)/lib/common \
         -I$(top_srcdir)/lib/gvc \
         -I$(top_srcdir)/lib/neatogen \
