--- a/lib/mingle/CMakeLists.txt
+++ b/lib/mingle/CMakeLists.txt
@@ -1,17 +1,5 @@
 if (ANN_FOUND)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/cdt
-    ${GRAPHVIZ_LIB_DIR}/cgraph
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/gvc
-    ${GRAPHVIZ_LIB_DIR}/pathplan
-    ${GRAPHVIZ_LIB_DIR}/sfdpgen
-    ${GRAPHVIZ_LIB_DIR}/sparse
-    ${ANN_INCLUDE_DIR}
-)
-
 add_library(libmingle STATIC
     # Header files
     agglomerative_bundling.h
@@ -26,6 +14,19 @@ add_library(libmingle STATIC
     ink.c
     nearest_neighbor_graph.c
     nearest_neighbor_graph_ann.cpp
+)
+
+target_include_directories(libmingle PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/cdt
+    ${GRAPHVIZ_LIB_DIR}/cgraph
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/gvc
+    ${GRAPHVIZ_LIB_DIR}/pathplan
+    ${GRAPHVIZ_LIB_DIR}/sfdpgen
+    ${GRAPHVIZ_LIB_DIR}/sparse
+    ${ANN_INCLUDE_DIR}
 )
 
 endif (ANN_FOUND)
