disambiguate lib/ortho/*.c #includes
Related to #1242 and #1785.

--- a/lib/ortho/CMakeLists.txt
+++ b/lib/ortho/CMakeLists.txt
@@ -2,17 +2,6 @@ if (with_ortho)
 
 add_definitions(-D_BLD_gvc=1)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/cdt
-    ${GRAPHVIZ_LIB_DIR}/cgraph
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/gvc
-    ${GRAPHVIZ_LIB_DIR}/neatogen
-    ${GRAPHVIZ_LIB_DIR}/pack
-    ${GRAPHVIZ_LIB_DIR}/pathplan
-)
-
 add_library(ortho STATIC
     # Header files
     fPQ.h
@@ -32,6 +21,18 @@ add_library(ortho STATIC
     rawgraph.c
     sgraph.c
     trapezoid.c
+)
+
+target_include_directories(ortho PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/cdt
+    ${GRAPHVIZ_LIB_DIR}/cgraph
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/gvc
+    ${GRAPHVIZ_LIB_DIR}/neatogen
+    ${GRAPHVIZ_LIB_DIR}/pack
+    ${GRAPHVIZ_LIB_DIR}/pathplan
 )
 
 endif (with_ortho)
