--- a/lib/osage/Makefile.am
+++ b/lib/osage/Makefile.am
@@ -2,6 +2,7 @@
 ## Process this file with automake to produce Makefile.in
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
         -I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/neatogen \
