--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -4,7 +4,7 @@
 pdfdir = $(pkgdatadir)/doc/pdf
 #pkgconfigdir = $(libdir)/pkgconfig
 
-AM_CPPFLAGS = -I$(top_srcdir) \
+AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/neatogen \
