disambiguate lib/pack/*.c #includes
Related to #1785.

--- a/lib/pack/CMakeLists.txt
+++ b/lib/pack/CMakeLists.txt
@@ -1,15 +1,5 @@
 add_definitions(-DGVC_EXPORTS)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/cdt
-    ${GRAPHVIZ_LIB_DIR}/cgraph
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/gvc
-    ${GRAPHVIZ_LIB_DIR}/neatogen
-    ${GRAPHVIZ_LIB_DIR}/pathplan
-)
-
 add_library(pack STATIC
     # Header files
     pack.h
@@ -17,6 +7,17 @@ add_library(pack STATIC
     # Source files
     ccomps.c
     pack.c
+)
+
+target_include_directories(pack PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/cdt
+    ${GRAPHVIZ_LIB_DIR}/cgraph
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/gvc
+    ${GRAPHVIZ_LIB_DIR}/neatogen
+    ${GRAPHVIZ_LIB_DIR}/pathplan
 )
 
 # Specify headers to be installed
