--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -5,6 +5,7 @@ pdfdir = $(pkgdatadir)/doc/pdf
 #pkgconfigdir = $(libdir)/pkgconfig
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
         -I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/neatogen \
