disambiguate lib/patchwork/*.c #includes
Related to #1785.

--- a/lib/patchwork/CMakeLists.txt
+++ b/lib/patchwork/CMakeLists.txt
@@ -1,4 +1,16 @@
-include_directories(
+add_library(patchwork STATIC
+    # Header files
+    patchwork.h
+    tree_map.h
+
+    # Source files
+    patchwork.c
+    patchworkinit.c
+    tree_map.c
+)
+
+target_include_directories(patchwork PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${GRAPHVIZ_LIB_DIR}/cdt
     ${GRAPHVIZ_LIB_DIR}/cgraph
@@ -9,15 +21,4 @@ include_directories(
     ${GRAPHVIZ_LIB_DIR}/pack
     ${GRAPHVIZ_LIB_DIR}/pathplan
     ${GRAPHVIZ_LIB_DIR}/sparse
-)
-
-add_library(patchwork STATIC
-    # Header files
-    patchwork.h
-    tree_map.h
-
-    # Source files
-    patchwork.c
-    patchworkinit.c
-    tree_map.c
 )
