--- a/lib/rbtree/Makefile.am
+++ b/lib/rbtree/Makefile.am
@@ -1,7 +1,7 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-AM_CPPFLAGS =
+AM_CPPFLAGS = -I$(top_srcdir)/lib
 
 noinst_HEADERS = red_black_tree.h stack.h
 noinst_LTLIBRARIES = librbtree_C.la
