dismbiguate lib/sfdpgen/*.c #includes
Related to #1242 and #1785.

--- a/lib/sfdpgen/CMakeLists.txt
+++ b/lib/sfdpgen/CMakeLists.txt
@@ -1,18 +1,5 @@
 if (with_sfdp)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/cdt
-    ${GRAPHVIZ_LIB_DIR}/cgraph
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/gvc
-    ${GRAPHVIZ_LIB_DIR}/neatogen
-    ${GRAPHVIZ_LIB_DIR}/pack
-    ${GRAPHVIZ_LIB_DIR}/pathplan
-    ${GRAPHVIZ_LIB_DIR}/rbtree
-    ${GRAPHVIZ_LIB_DIR}/sparse
-)
-
 add_library(sfdpgen STATIC
     # Header files
     Multilevel.h
@@ -34,6 +21,20 @@ add_library(sfdpgen STATIC
     spring_electrical.c
     stress_model.c
     uniform_stress.c
+)
+
+target_include_directories(sfdpgen PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/cdt
+    ${GRAPHVIZ_LIB_DIR}/cgraph
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/gvc
+    ${GRAPHVIZ_LIB_DIR}/neatogen
+    ${GRAPHVIZ_LIB_DIR}/pack
+    ${GRAPHVIZ_LIB_DIR}/pathplan
+    ${GRAPHVIZ_LIB_DIR}/rbtree
+    ${GRAPHVIZ_LIB_DIR}/sparse
 )
 
 endif (with_sfdp)
