disambiguate lib/sparse/*.c #includes
Related to #1242 and #1785.

--- a/lib/sparse/CMakeLists.txt
+++ b/lib/sparse/CMakeLists.txt
@@ -1,11 +1,3 @@
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/cdt
-    ${GRAPHVIZ_LIB_DIR}/cgraph
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/sfdpgen
-)
-
 add_library(sparse STATIC
     # Header files
     BinaryHeap.h
@@ -34,4 +26,13 @@ add_library(sparse STATIC
     QuadTree.c
     SparseMatrix.c
     vector.c
+)
+
+target_include_directories(sparse PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/cdt
+    ${GRAPHVIZ_LIB_DIR}/cgraph
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/sfdpgen
 )
